update section 1,2,3,4,5: 100% section 6: 50%

--- a/index.html
+++ b/index.html
@@ -30,44 +30,46 @@
                 </div>
             </div>
         </div>
-        <div class="display__space-between section-first__Get-More-Done-with-whitepace">
-            <div class="display__column-flex-start-center section-first__Get-More-Done-with-whitepace--block">
+        <div class="display__space-between position__relative section-first__Get-More-Done-with-whitepace">
+            <img class="position__absolute section-first__Get-More-Done-with-whitepace--background-image" src="./assets/images/section-first__Get-More-Done-with-whitepace--background-image.png" />
+            <div class="display__column-flex-start-center z-index__1 section-first__Get-More-Done-with-whitepace--block">
                 <p class="font__700-64 color__white margin__24">Get More Done with whitepace</p>
                 <p class="font__400-18 color__white margin__60">Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
                 <button class="button__20202020-8-500-18">Try Whitepace free<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
             </div>
-            <div class="background-color__blue3 section-first__Get-More-Done-with-whitepace--container"></div>
+            <div class="background-color__blue3 z-index__1 section-first__Get-More-Done-with-whitepace--container"></div>
         </div>
     </section>
 
     <section class="background-color__white section-second">
-        <div class="display__space-between section-second__Project-Management">
-            <div class="display__column-flex-start-center position__relative-1 section-second__Project-Management--block">
-                <p class="font__700-72 color__black margin__24 position__relative-3">Project Management</p>
+        <div class="display__space-between position__relative section-second__Project-Management">
+            <img class="position__absolute section-second__Project-Management--background-image" src="./assets/images/section-second__Project-Management--background-image.png" />
+            <div class="display__column-flex-start-center position__relative z-index__1 section-second__Project-Management--block">
+                <p class="font__700-72 color__black margin__24 z-index__3">Project Management</p>
                 <p class="font__400-18 color__black margin__60">Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app. Take photos with the mobile app and save them to a note.</p>
                 <button class="button__20402040-6-500-18">Get Started<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
-                <img class="position__absolute-2 section-second__Project-Management--highlight-image" src="./assets/images/section-second__Project-Management--highlight-image.png" />
+                <img class="position__absolute z-index__2 section-second__Project-Management--highlight-image" src="./assets/images/section-second__Project-Management--highlight-image.png" />
             </div>
             <div class="background-color__blue3 section-second__Project-Management--container"></div>
         </div>
         <div class="display__space-between section-second__Work-together">
-            <div class="section-second__Work-together--container"><img class="section-second__Work-together--image" src="./assets/images/section-second__Work-together--image.png" /></div>
-            <div class="display__column-flex-start-center position__relative-1 section-second__Work-together--block">
-                <p class="font__700-72 color__black margin__24 position__relative-3">Work together</p>
+            <div class="section-second__Work-together--container"><img class="section-second__Work-together--banner-image" src="./assets/images/section-second__Work-together--banner-image.png" /></div>
+            <div class="display__column-flex-start-center position__relative z-index__1 section-second__Work-together--block">
+                <p class="font__700-72 color__black margin__24 z-index__3">Work together</p>
                 <p class="font__400-18 color__black margin__60">With whitepace, share your notes with your colleagues and collaborate on them. You can also publish a note to the internet and share the URL with others.</p>
                 <button class="button__20402040-6-500-18">Try it now<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
-                <img class="position__absolute-2 section-second__Work-together--highlight-image" src="./assets/images/section-second__Work-together--highlight-image.png" />
+                <img class="position__absolute z-index__2 section-second__Work-together--highlight-image" src="./assets/images/section-second__Work-together--highlight-image.png" />
             </div>
         </div>
     </section>
 
     <section class="background-color__blue1 section-third">
         <div class="display__space-between section-third__Use-as-Extension">
-            <div class="display__column-flex-start-center position__relative-1 section-third__Use-as-Extension--block">
-                <p class="font__700-72 color__white margin__24 position__relative-3">Use as Extension</p>
+            <div class="display__column-flex-start-center position__relative z-index__1 section-third__Use-as-Extension--block">
+                <p class="font__700-72 color__white margin__24 z-index__3">Use as Extension</p>
                 <p class="font__400-18 color__white margin__60">Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
                 <button class="button__20402040-6-500-18">Let’s Go<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
-                <img class="position__absolute-2 section-third__Use-as-Extension--highlight-image" src="./assets/images/section-third__Use-as-Extension--highlight-image.png" />
+                <img class="position__absolute z-index__2 section-third__Use-as-Extension--highlight-image" src="./assets/images/section-third__Use-as-Extension--highlight-image.png" />
             </div>
             <div class="background-color__blue3 section-third__Use-as-Extension--container"></div>
         </div>
@@ -76,67 +78,86 @@
     <section class="background-color__white section-fourth">
         <div class="display__space-between section-fourth__Customise-it-to-your-needs">
             <div class="background-color__blue3 section-fourth__Customise-it-to-your-needs--container"></div>
-            <div class="display__column-flex-start-center position__relative-1 section-fourth__Customise-it-to-your-needs--block">
-                <p class="font__700-72 color__black margin__24 position__relative-3">Customise it to your needs</p>
+            <div class="display__column-flex-start-center position__relative z-index__1 section-fourth__Customise-it-to-your-needs--block">
+                <p class="font__700-72 color__black margin__24 z-index__3">Customise it to your needs</p>
                 <p class="font__400-18 color__black margin__60">Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
                 <button class="button__20402040-8-500-18">Let’s Go<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
-                <img class="position__absolute-2 section-fourth__Customise-it-to-your-needs--highlight-image" src="./assets/images/section-fourth__Customise-it-to-your-needs--highlight-image.png" />
+                <img class="position__absolute z-index__2 section-fourth__Customise-it-to-your-needs--highlight-image" src="./assets/images/section-fourth__Customise-it-to-your-needs--highlight-image.png" />
             </div>
         </div>
         <div class="display__column-center section-fourth__Choose-Your-Plan">
-            <div class="display__column-center position__relative-1 section-fourth__Choose-Your-Plan--block">
-                <p class="font__700-72 color__black margin__24 position__relative-3">Choose Your Plan</p>
+            <div class="display__column-center position__relative z-index__1 section-fourth__Choose-Your-Plan--block">
+                <p class="font__700-72 color__black margin__24 z-index__3">Choose Your Plan</p>
                 <p class="font__400-18 color__black">Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
-                <img class="position__absolute-2 section-fourth__Choose-Your-Plan--highlight-image" src="./assets/images/section-fourth__Choose-Your-Plan--highlight-image.png" />
+                <img class="position__absolute z-index__2 section-fourth__Choose-Your-Plan--highlight-image" src="./assets/images/section-fourth__Choose-Your-Plan--highlight-image.png" />
             </div>
             <div class="section-fourth__Choose-Your-Plan--Free-Personal-Organization">
                 <div class="section-fourth__Choose-Your-Plan--Free">
                     <p class="font__600-24 color__black margin__25">Free</p>
                     <p class="font__700-36 color__black margin__25">$0</p>
                     <p class="font__500-18 color__black margin__25">Capture ideas and find them quickly</p>
-                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Sync unlimited devices</p>
-                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />10 GB monthly uploads</p>
-                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />200 MB max. note size</p>
-                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Customize Home dashboard and access extra widgets</p>
-                    <p class="font__400-16 color__black margin__28"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Connect primary Google Calendar account</p>
-                    <p class="font__400-16 color__black margin__25"><img class="circle-check-Free" src="./assets/images/circle-check-Free.png" />Add due dates, reminders, and notifications to your tasks</p>
-                </div class="section-fourth__Choose-Your-Plan--Personal">
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                <div class="section-fourth__Choose-Your-Plan--Organization">
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Sync unlimited devices</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />10 GB monthly uploads</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />200 MB max. note size</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Customize Home dashboard and access extra widgets</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Connect primary Google Calendar account</p>
+                    <p class="display__center font__400-16 color__black margin__25"><img class="circle-check" src="./assets/images/circle-check-Free.png" />Add due dates, reminders, and notifications to your tasks</p>
+                    <button class="section-fourth__Choose-Your-Plan--Free-button">Get Started</button>
                 </div>
-                <div>
-
+                <div class="section-fourth__Choose-Your-Plan--Personal">
+                    <p class="font__600-24 color__white margin__25">Personal</p>
+                    <p class="font__700-36 color__yellow margin__25">$11.99</p>
+                    <p class="font__500-18 color__white margin__25">Keep home and family on track</p>
+                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Sync unlimited devices</p>
+                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />10 GB monthly uploads</p>
+                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />200 MB max. note size</p>
+                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Customize Home dashboard and access extra widgets</p>
+                    <p class="display__center font__500-18 color__white margin__28"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Connect primary Google Calendar account</p>
+                    <p class="display__center font__500-18 color__white margin__25"><img class="circle-check" src="./assets/images/circle-check-Personal.png" />Add due dates, reminders, and notifications to your tasks</p>
+                    <button class="section-fourth__Choose-Your-Plan--Personal-button">Get Started</button>
+                </div>
+                <div class="section-fourth__Choose-Your-Plan--Organization">
+                    <p class="font__600-24 color__black margin__25">Organization</p>
+                    <p class="font__700-36 color__black margin__25">$49.99</p>
+                    <p class="font__500-18 color__black margin__25">Capture ideas and find them quickly</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Sync unlimited devices</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />10 GB monthly uploads</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />200 MB max. note size</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Customize Home dashboard and access extra widgets</p>
+                    <p class="display__center font__400-16 color__black margin__28"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Connect primary Google Calendar account</p>
+                    <p class="display__center font__400-16 color__black margin__25"><img class="circle-check" src="./assets/images/circle-check-Organization.png" />Add due dates, reminders, and notifications to your tasks</p>
+                    <button class="section-fourth__Choose-Your-Plan--Organization-button">Get Started</button>
                 </div>
             </div>
         </div>
     </section>
 
     <section class="background-color__blue1 section-fifth">
-        <div class="display__column-center section-fifth__Your-work-everywhere-you-are">
-            <div class="display__column-center position__relative-1 section-fifth__Your-work-everywhere-you-are--block">
-                <p class="font__700-72 color__white margin__24 position__relative-3">Your work, everywhere you are</p>
-                <p class="font__400-18 color__white margin__60">Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also available!</p>
-                <img class="position__absolute-2 section-fifth__Your-work-everywhere-you-are--highlight-image" src="./assets/images/section-fifth__Your-work-everywhere-you-are--highlight-image.png" />
+        <div class="display__column-center position__relative section-fifth__Your-work-everywhere-you-are">
+            <img class="position__absolute section-fifth__Your-work-everywhere-you-are--background-image" src="./assets/images/section-fifth__Your-work-everywhere-you-are--background-image.png" />
+            <div class="display__column-center position__relative z-index__1 section-fifth__Your-work-everywhere-you-are--block">
+                <p class="font__700-72 color__white margin__24 text-align__center z-index__3">Your work, everywhere you are</p>
+                <p class="font__400-18 color__white margin__60 text-align__center">Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also available!</p>
+                <img class="position__absolute z-index__2 section-fifth__Your-work-everywhere-you-are--highlight-image" src="./assets/images/section-fifth__Your-work-everywhere-you-are--highlight-image.png" />
                 <button class="button__20402040-8-500-18">Try Taskey<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
             </div>
         </div>
+    </section>
+
+    <section class="background-color__white section-sixth">
+        <div class="display__space-between section-sixth__100-your-data">
+            <div class="display__column-flex-start-center position__relative z-index__1 section-sixth__100-your-data--block">
+                <p class="font__700-72 color__black margin__24 z-index__3">100% your data</p>
+                <p class="font__400-18 color__black margin__60">The app is open source and your notes are saved to an open format, so you'll always have access to them. Uses End-To-End Encryption (E2EE) to secure your notes and ensure no-one but yourself can access them.</p>
+                <button class="button__20402040-8-500-18">Read more<img class="padding__10" src="./assets/images/arrow-right.png" /></button>
+                <img class="position__absolute z-index__2 section-sixth__100-your-data--highlight-image" src="./assets/images/section-sixth__100-your-data--highlight-image.png" />
+            </div>
+            <div class="section-sixth__100-your-data--container"><img class="section-sixth__100-your-data--banner-image" src="./assets/images/section-sixth__100-your-data--banner-image.png" /></div>
+        </div>
+    </section>
+
+    <section class="background-color__blue1 section-seventh">
+
     </section>
 </body>
 
