--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
         <div class="second-section__first-content">
           <div class="second-section__first-content__left-side">
             <h6>Project Management</h6>
-            <img src="./Image/img_element-text.png" />
 
             <h5>
               Images, video, PDFs and audio files are supported. Create math
               expressions and diagrams directly from the app. Take photos with
               the mobile app and save them to a note
             </h5>
+
             <a
               href="#"
               class="second-section__first-content__left-side__btn-started"
@@ -120,6 +120,7 @@
 
           <div class="second-section__second-content__right-side">
             <h6>Work together</h6>
+
             <h5>
               With Whitepace, share your notes your colleagues and collaborate
               on them. You can also publish a note the internet and share the
@@ -132,6 +133,76 @@
               <h6>Try it now</h6>
               <img src="./Icon/icon_arrow-next.png" />
             </a>
+          </div>
+        </div>
+      </section>
+
+      <section id="thirt-section">
+        <div class="thirt-section__first-content">
+          <div class="thirt-section__first-content__left-side">
+            <h6>Use as Extension</h6>
+
+            <h5>
+              Use the web clipper extension, available on Chrome and Firefox, to
+              save web pages or take screenshots as notes.
+            </h5>
+
+            <a
+              href="#"
+              class="thirt-section__first-content__left-side__btn-get-started"
+            >
+              <h6>Let's go</h6>
+              <img src="./Icon/icon_arrow-next.png" />
+            </a>
+          </div>
+
+          <div class="thirt-section__first-content__right-side">
+            <div
+              class="thirt-section__first-content__right-side__image-container"
+            ></div>
+          </div>
+        </div>
+      </section>
+
+      <section id="four-section">
+        <div class="four-section__first-content">
+          <div class="four-section__first-content__left-side">
+            <div
+              class="four-section__first-content__left-side__image-container"
+            ></div>
+          </div>
+
+          <div class="four-section__first-content__right-side">
+            <h6>Customise it to your needs</h6>
+
+            <h5>
+              Customise the app with plugins, custom themes and multiple text
+              editors (Rich Text or Markdown). Or create your own scripts and
+              plugins using the Extension API.
+            </h5>
+
+            <a
+              href="#"
+              class="four-section__first-content__right-side__btn-get-started"
+            >
+              <h6>Let's go</h6>
+              <img src="./Icon/icon_arrow-next.png" />
+            </a>
+          </div>
+        </div>
+
+        <div class="four-section__second-content">
+          <div class="four-section__second-content__heading">
+            <h6>Choose your plan</h6>
+            <h5>
+              Whether you want to get organized, keep your personal life on
+              track, or boost workplace productivity, Evernote has the right
+              plan for you.
+            </h5>
+          </div>
+
+          <div class="four-section__second-content__price-list">
+            
           </div>
         </div>
       </section>
