--- a/index.html
+++ b/index.html
@@ -390,6 +390,128 @@
       </div>
     </section>
 
+    <!-- SECTION 7 WORK WITH YOUR ... -->
+    <section class="section7__container container">
+      <div class="section7__img">
+        <img src="./acssets/img/img_section7.png" alt="#" />
+      </div>
+      <div class="section7__data">
+        <h3 class="section7__title title">
+          Work with Your Favorite Apps Using whitepace
+        </h3>
+        <p class="section7__content content">
+          Whitepace teams up with your favorite software. Integrate with over
+          1000+ apps with Zapier to have all the tools you need for your project
+          success.
+        </p>
+        <a href="#" class="section7__button button"
+          >Read More
+          <i class="fa-solid fa-arrow-right"></i>
+        </a>
+      </div>
+    </section>
+
+    <!-- SECTION 8 WHAT OUR CLIENTS SAYS -->
+    <section class="section8__container container">
+      <h3 class="section8__title title">
+        What Our Clients Says
+        <img
+          src="./acssets/img/img__section8_element.png"
+          alt="#"
+          class="section8__img-title"
+        />
+      </h3>
+      <!-- card left -->
+      <div class="section8__card-list">
+        <div class="section8__card-white section8__card">
+          <div class="section8__card-top">
+            <img
+              src="./acssets/img/img_section8_card_top_blue.png"
+              alt="#"
+              class="section8__img-icon"
+            />
+            <p class="section8__card-top--content content">
+              Whitepate is designed as a collaboration tool for businesses that
+              is a full project management solution.
+            </p>
+          </div>
+          <div class="section8__card-bottom">
+            <div class="section8__card-bottom--avatar">
+              <img src="./acssets/img/img_section8_card_avata1.png" alt="#" />
+            </div>
+            <div class="section8__card-bottom--data">
+              <h4 class="section8__card-bottom--data-title--white">
+                Oberon Shaw, MCH
+              </h4>
+              <p class="section8__card-bottom--data-content">
+                Head of Talent Acquisition, North America
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- card middle -->
+      <div class="section8__card-list">
+        <div class="section8__card-blue section8__card">
+          <div class="section8__card-top">
+            <img
+              src="./acssets/img/img_section8_card_top_white.png"
+              alt="#"
+              class="section8__img-icon"
+            />
+            <p class="section8__card-top--content content">
+              Whitepate is designed as a collaboration tool for businesses that
+              is a full project management solution.
+            </p>
+          </div>
+          <div class="section8__card-bottom">
+            <div class="section8__card-bottom--avatar">
+              <img src="./acssets/img/img_section8_card_avata2.png" alt="#" />
+            </div>
+            <div class="section8__card-bottom--data">
+              <h4 class="section8__card-bottom--data-title--blue">
+                Oberon Shaw, MCH
+              </h4>
+              <p class="section8__card-bottom--data-content">
+                Head of Talent Acquisition, North America
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- card right -->
+      <div class="section8__card-list">
+        <div class="section8__card-blue section8__card">
+          <div class="section8__card-top">
+            <img
+              src="./acssets/img/img_section8_card_top_white.png"
+              alt="#"
+              class="section8__img-icon"
+            />
+            <p class="section8__card-top--content content">
+              Whitepate is designed as a collaboration tool for businesses that
+              is a full project management solution.
+            </p>
+          </div>
+          <div class="section8__card-bottom">
+            <div class="section8__card-bottom--avatar">
+              <img src="./acssets/img/img_section8_card_avata2.png" alt="#" />
+            </div>
+            <div class="section8__card-bottom--data">
+              <h4 class="section8__card-bottom--data-title--blue">
+                Oberon Shaw, MCH
+              </h4>
+              <p class="section8__card-bottom--data-content">
+                Head of Talent Acquisition, North America
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://kit.fontawesome.com/a2eca21ea1.js"
       crossorigin="anonymous"
