--- a/index.html
+++ b/index.html
@@ -154,6 +154,15 @@
             </div>
             <div class="section-sixth__100-your-data--container"><img class="section-sixth__100-your-data--banner-image" src="./assets/images/section-sixth__100-your-data--banner-image.png" /></div>
         </div>
+        <div class="display__space-between section-sixth__Our-sponsors">
+            <div class="display__column-flex-start-center position__relative z-index__1 section-sixth__Our-sponsors--block">
+                <p class="font__700-72 color__black margin__24 z-index__3">Our sponsors</p>
+                <img class="position__absolute z-index__2 section-sixth__Our-sponsors--highlight-image" src="./assets/images/section-sixth__Our-sponsors--highlight-image.png" />
+            </div>
+            <div class="section-sixth__Our-sponsors--container">
+                <img class="section-sixth__Our-sponsors--banner-image" src="./assets/images/section-sixth__Our-sponsors--banner-image.png" />
+            </div>
+        </div>
     </section>
 
     <section class="background-color__blue1 section-seventh">
