--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="box box1"></div>
-      <div class="box box2"></div>
+      <!-- <div class="box box1"></div> -->
+      <!-- <div class="box box2"></div> -->
+      <!-- <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div>
+      <div class="circle"></div> -->
+
+      <div class="circle"></div>
     </div>
   </body>
 </html>
