--- a/index.html
+++ b/index.html
@@ -154,13 +154,16 @@
             </div>
             <div class="section-sixth__100-your-data--container"><img class="section-sixth__100-your-data--banner-image" src="./assets/images/section-sixth__100-your-data--banner-image.png" /></div>
         </div>
-        <div class="display__space-between section-sixth__Our-sponsors">
-            <div class="display__column-flex-start-center position__relative z-index__1 section-sixth__Our-sponsors--block">
+        <div class="display__column-center section-sixth__Our-sponsors">
+            <div class="display__column-center position__relative z-index__1 section-sixth__Our-sponsors--block">
                 <p class="font__700-72 color__black margin__24 z-index__3">Our sponsors</p>
                 <img class="position__absolute z-index__2 section-sixth__Our-sponsors--highlight-image" src="./assets/images/section-sixth__Our-sponsors--highlight-image.png" />
             </div>
-            <div class="section-sixth__Our-sponsors--container">
-                <img class="section-sixth__Our-sponsors--banner-image" src="./assets/images/section-sixth__Our-sponsors--banner-image.png" />
+            <div class="display__space-between section-sixth__Our-sponsors--container">
+                <img class="section-sixth__Our-sponsors--apple-image" src="./assets/images/section-sixth__Our-sponsors--apple-image.png" />
+                <img class="section-sixth__Our-sponsors--microsoft-image" src="./assets/images/section-sixth__Our-sponsors--microsoft-image.png" />
+                <img class="section-sixth__Our-sponsors--slack-image" src="./assets/images/section-sixth__Our-sponsors--slack-image.png" />
+                <img class="section-sixth__Our-sponsors--google-image" src="./assets/images/section-sixth__Our-sponsors--google-image.png" />                
             </div>
         </div>
     </section>
