--- a/index.html
+++ b/index.html
@@ -8,26 +8,31 @@
     <link rel="stylesheet" href="./css/index.css"/> 
 </head>
 <body>
-    <div class="head-er">
-        <div>
-            <img href="./accets/icon/Vector.png"/>
-        
-            <img href="./accets/icon/img_logosm1.png"/>
-        
-            <img href="./accets/icon/whitepace.png"/>
+    <header>
+        <div class="logo-bt">
+            <nav class="logo-bt-background-1">
+                <div class="logo-head">
+                    <img src="./accets/img/img_background.png"/>
+                </div>
+                <div class="img_logo">
+                    <img src="./accets/img/img_logo.png"/>
+                </div>
         </div>
-        <div>
-            <a href="#product">Product</a>
+        <div class="head-er">
+                <div>
+                    <a href="#product">Product</a>
+                </div>
+                <div>
+                    <a href="#solutions">Solutions</a>
+                </div>
+                <div>
+                    <a href="#resource">Resource</a>
+                </div>
+                <div>
+                    <a href="#pricing">Pricing</a>
+                </div>
+            </nav>
         </div>
-        <div>
-            <a href="#solutions">Solutions</a>
-        </div>
-        <div>
-            <a href="#resource">Resource</a>
-        </div>
-        <div>
-            <a href="#pricing">Pricing</a>
-        </div>
-    </div>
+    </header>
 </body>
 </html>
