--- a/index.html
+++ b/index.html
@@ -201,9 +201,178 @@
             </h5>
           </div>
 
-          <div class="four-section__second-content__price-list">
-            
+          <div class="four-section__second-content__board-list">
+            <div
+              class="four-section__second-content__board-list__child-board-1"
+            >
+              <h6>Free</h6>
+              <h5>$0</h5>
+              <h4>Capture ideas and find them quickly</h4>
+
+              <ul
+                class="four-section__second-content__price-list__child-board-1__child-list"
+              >
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>Sync unlimited devices</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>10 GB monthly uploads</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>200 MB max. note size</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>Customize Home dashboard and access extra widgets</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>Connect primary Google Calendar account</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>
+                    Add due dates, reminders, and notifications to your tasks
+                  </h6>
+                </li>
+              </ul>
+
+              <a
+                href="#"
+                class="four-section__second-content__price-list__child-board-1__btn-get-started"
+              >
+                Get started
+              </a>
+            </div>
+
+            <div
+              class="four-section__second-content__board-list__child-board-2"
+            >
+              <h6>Personal</h6>
+              <h5>$11.99</h5>
+              <h4>Keep home and family on track</h4>
+
+              <ul
+                class="four-section__second-content__price-list__child-board-2__child-list"
+              >
+                <li>
+                  <img src="./Icon/icon_check-mark-yellow.png" />
+                  <h6>Sync unlimited devices</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-yellow.png" />
+                  <h6>10 GB monthly uploads</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-yellow.png" />
+                  <h6>200 MB max. note size</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-yellow.png" />
+                  <h6>Customize Home dashboard and access extra widgets</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-yellow.png" />
+                  <h6>Connect primary Google Calendar account</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-yellow.png" />
+                  <h6>
+                    Add due dates, reminders, and notifications to your tasks
+                  </h6>
+                </li>
+              </ul>
+
+              <a
+                href="#"
+                class="four-section__second-content__price-list__child-board-2__btn-get-started"
+              >
+                Get started
+              </a>
+            </div>
+
+            <div
+              class="four-section__second-content__board-list__child-board-3"
+            >
+              <h6>Personal</h6>
+              <h5>$11.99</h5>
+              <h4>Capture ideas and find them quickly</h4>
+
+              <ul
+                class="four-section__second-content__price-list__child-board-3__child-list"
+              >
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>Sync unlimited devices</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>10 GB monthly uploads</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>200 MB max. note size</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>Customize Home dashboard and access extra widgets</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>Connect primary Google Calendar account</h6>
+                </li>
+
+                <li>
+                  <img src="./Icon/icon_check-mark-black.png" />
+                  <h6>
+                    Add due dates, reminders, and notifications to your tasks
+                  </h6>
+                </li>
+              </ul>
+
+              <a
+                href="#"
+                class="four-section__second-content__price-list__child-board-3__btn-get-started"
+              >
+                Get started
+              </a>
+            </div>
           </div>
+        </div>
+      </section>
+
+      <section id="five-section">
+        <div class="five-section__first-content">
+          <h6>Your work, everywhere you are</h6>
+
+          <h5>
+            Access your notes from your computer, phone or tablet by
+            synchronising with various services, including whitepace, Dropbox
+            and OneDrive. The app is available on Windows, macOS, Linux, Android
+            and iOS. A terminal app is also available!
+          </h5>
+
+          <a href="#" class="five-section__first-content__btn-try">
+            <h6>Try Taskey</h6>
+            <img src="./Icon/icon_arrow-next.png">
+          </a>
         </div>
       </section>
     </main>
